--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,42 +1,66 @@
-name: discord notifications
+name: Build native .so (Android)
 
 on:
   push:
-    branches:
-      - main
-  release:
-    types: [published]
-  pull_request:
-    types: [opened, synchronize, reopened]
+    branches: [ main, master ]
+  workflow_dispatch:
 
 jobs:
-  notify:
+  build:
+    name: Build native libs
     runs-on: ubuntu-latest
     steps:
-      - name: send discord notification
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Setup Android SDK (tools + platform-tools)
+        uses: android-actions/setup-android@v3
+        # you can optionally add `with: packages: 'platforms;android-33;build-tools;33.0.2'`
+        # but leaving default installs cmdline-tools + platform-tools which is enough for Gradle to work.
+        with:
+          accept-android-sdk-licenses: 'yes'
+
+      - name: Install Android NDK and link to SDK
+        uses: nttld/setup-ndk@v1
+        with:
+          # choose an NDK version; r26d is a recent example — you may change this if your project requires a specific NDK
+          ndk-version: r26d
+          link-to-sdk: true
+
+      - name: Ensure gradle wrapper is executable
+        run: chmod +x ./gradlew
+
+      - name: Show Gradle & Java versions
         run: |
-          if [ "${{ github.repository }}" != "${{ github.event.repository.full_name }}" ]; then
-            echo "fork detected, skipping notification"
-            exit 0
-          fi
+          ./gradlew -v
+          java -version
 
-          if [ "${GITHUB_EVENT_NAME}" = "push" ]; then
-            message="new push by $GITHUB_ACTOR to $GITHUB_REPOSITORY\ncommit: ${{ github.event.head_commit.message }}\nbranch: ${GITHUB_REF}"
+      - name: Build (assemble release)
+        # Use whichever Gradle task fits your project: assembleDebug, assembleRelease, build, etc.
+        run: ./gradlew --no-daemon clean assembleRelease
 
-          elif [ "${GITHUB_EVENT_NAME}" = "release" ]; then
-            message="new release published by $GITHUB_ACTOR\nrepo: $GITHUB_REPOSITORY\nrelease: ${{ github.event.release.name }} (${{
-            github.event.release.tag_name }})\nurl: ${{ github.event.release.html_url }}"
+      - name: Show built .so files (for debugging)
+        run: |
+          echo "---- looking for .so files under app/build ----"
+          find app/build -type f -name "*.so" -print || true
+          echo "---- looking for .so files anywhere ----"
+          find . -type f -name "*.so" -print || true
 
-          elif [ "${GITHUB_EVENT_NAME}" = "pull_request" ]; then
-            pr_source="${{ github.event.pull_request.head.repo.full_name }}"
-            pr_branch="${{ github.event.pull_request.head.ref }}"
-            pr_number="${{ github.event.pull_request.number }}"
-            pr_title="${{ github.event.pull_request.title }}"
-            message="new pull request #$pr_number from $pr_source:$pr_branch\nrepo: $GITHUB_REPOSITORY\ntitle: $pr_title\nopened by: $GITHUB_ACTOR"
-          fi
-          
-          curl -H "content-type: application/json" \
-            -d "{\"content\":\"$message\"}" \
-            ${{ secrets.DISCORD_WEBHOOK }}
-        env:
-          GITHUB_EVENT_NAME: ${{ github.event_name }}
+      - name: Collect native libs and upload artifact
+        run: |
+          mkdir -p /tmp/native-libs
+          # copy all .so files (preserving directories) into one folder so upload-artifact picks them up
+          find . -type f -name '*.so' -exec rsync -R {} /tmp/native-libs/ \; || true
+          ls -R /tmp/native-libs || true
+
+      - name: Upload native-libs artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: native-libs
+          path: /tmp/native-libs
